--- a/src/pages/Home/Mint/bonustable.module.scss
+++ b/src/pages/Home/Mint/bonustable.module.scss
@@ -4,6 +4,9 @@ table.bonusTable {
     background-color: white;
     color: black;
 
+    width: 100%;
+    height: 100%;
+
     &  { 
         margin-top:  20px;
          display: inline-block; 
